Updated the CV and made all the tests work again, I hope.